fixed home page heading spacing

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -51,6 +51,8 @@ $brandFont: 'Monda';
 
 .margin-top-sm {  margin-top:$smallPadding; }
 
+.remove-margin-top {margin-top:0px;}
+
 .pad-left-sm {    padding-left: $smallPadding; }
 
 .pad-top-sm {     padding-top:$smallPadding;}
